# N64 Tools CMakeLists.txt

# TODO: Add N64 tools here
# add_executable(dolphin-n64-tool
#     N64Tool.h
#     N64Tool.cpp
#     N64ROMInfo.h
#     N64ROMInfo.cpp
#     N64ROMConverter.h
#     N64ROMConverter.cpp
# )

# Set include directories
# target_include_directories(dolphin-n64-tool PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${CMAKE_SOURCE_DIR}/Source/Core
#     ${CMAKE_SOURCE_DIR}/Source/Common
# )

# Link with existing Dolphin libraries
# target_link_libraries(dolphin-n64-tool
#     dolphin-core
#     dolphin-common
#     dolphin-n64
# )

# Set compile options
# target_compile_features(dolphin-n64-tool PRIVATE cxx_std_20)