# N64 Audio CMakeLists.txt

# TODO: Add N64 audio system files here
# add_library(dolphin-n64-audio STATIC
#     N64AudioInterface.h
#     N64AudioInterface.cpp
#     N64AudioMixer.h
#     N64AudioMixer.cpp
#     N64AudioBackend.h
#     N64AudioBackend.cpp
# )

# Set include directories
# target_include_directories(dolphin-n64-audio PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${CMAKE_SOURCE_DIR}/Source/Core
#     ${CMAKE_SOURCE_DIR}/Source/Common
#     ${CMAKE_SOURCE_DIR}/Source/Core/AudioCommon
# )

# Link with existing Dolphin libraries
# target_link_libraries(dolphin-n64-audio
#     dolphin-core
#     dolphin-common
#     dolphin-audio-common
# )

# Set compile options
# target_compile_features(dolphin-n64-audio PRIVATE cxx_std_20)