# N64 Graphics CMakeLists.txt

# TODO: Add N64 graphics system files here
# add_library(dolphin-n64-graphics STATIC
#     RCP/RealityCoprocessor.h
#     RCP/RealityCoprocessor.cpp
#     RCP/RSP/RSP.h
#     RCP/RSP/RSP.cpp
#     RCP/RDP/RDP.h
#     RCP/RDP/RDP.cpp
# )

# Set include directories
# target_include_directories(dolphin-n64-graphics PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${CMAKE_SOURCE_DIR}/Source/Core
#     ${CMAKE_SOURCE_DIR}/Source/Common
# )

# Link with existing Dolphin libraries
# target_link_libraries(dolphin-n64-graphics
#     dolphin-core
#     dolphin-common
#     dolphin-video-common
# )

# Set compile options
# target_compile_features(dolphin-n64-graphics PRIVATE cxx_std_20)