# N64 Memory CMakeLists.txt

# TODO: Add N64 memory management files here
# add_library(dolphin-n64-memory STATIC
#     N64MemoryManager.h
#     N64MemoryManager.cpp
#     N64MemoryMap.h
#     N64MemoryMap.cpp
#     N64DMA.h
#     N64DMA.cpp
#     N64RDRAM.h
#     N64RDRAM.cpp
#     N64SRAM.h
#     N64SRAM.cpp
# )

# Set include directories
# target_include_directories(dolphin-n64-memory PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${CMAKE_SOURCE_DIR}/Source/Core
#     ${CMAKE_SOURCE_DIR}/Source/Common
# )

# Link with existing Dolphin libraries
# target_link_libraries(dolphin-n64-memory
#     dolphin-core
#     dolphin-common
# )

# Set compile options
# target_compile_features(dolphin-n64-memory PRIVATE cxx_std_20)