# N64 NoGUI CMakeLists.txt

# TODO: Add N64 NoGUI files here
# add_library(dolphin-n64-ui-nogui STATIC
#     N64NoGUIMain.h
#     N64NoGUIMain.cpp
# )

# Set include directories
# target_include_directories(dolphin-n64-ui-nogui PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${CMAKE_SOURCE_DIR}/Source/Core
#     ${CMAKE_SOURCE_DIR}/Source/Common
#     ${CMAKE_SOURCE_DIR}/Source/Core/UICommon
#     ${CMAKE_SOURCE_DIR}/Source/Core/DolphinNoGUI
# )

# Link with existing Dolphin libraries
# target_link_libraries(dolphin-n64-ui-nogui
#     dolphin-core
#     dolphin-common
#     dolphin-ui-common
#     dolphin-nogui
# )

# Set compile options
# target_compile_features(dolphin-n64-ui-nogui PRIVATE cxx_std_20)