# N64 Null Video Backend CMakeLists.txt

# TODO: Add N64 null video backend files here
# add_library(dolphin-n64-video-null STATIC
#     N64NullVideoBackend.h
#     N64NullVideoBackend.cpp
# )

# Set include directories
# target_include_directories(dolphin-n64-video-null PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${CMAKE_SOURCE_DIR}/Source/Core
#     ${CMAKE_SOURCE_DIR}/Source/Common
#     ${CMAKE_SOURCE_DIR}/Source/Core/VideoCommon
# )

# Link with existing Dolphin libraries
# target_link_libraries(dolphin-n64-video-null
#     dolphin-core
#     dolphin-common
#     dolphin-video-common
# )

# Set compile options
# target_compile_features(dolphin-n64-video-null PRIVATE cxx_std_20)