# N64 OGL Video Backend CMakeLists.txt

# TODO: Add N64 OpenGL video backend files here
# add_library(dolphin-n64-video-ogl STATIC
#     N64OGLVideoBackend.h
#     N64OGLVideoBackend.cpp
#     N64OGLTextureCache.h
#     N64OGLTextureCache.cpp
# )

# Set include directories
# target_include_directories(dolphin-n64-video-ogl PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${CMAKE_SOURCE_DIR}/Source/Core
#     ${CMAKE_SOURCE_DIR}/Source/Common
#     ${CMAKE_SOURCE_DIR}/Source/Core/VideoCommon
# )

# Link with existing Dolphin libraries
# target_link_libraries(dolphin-n64-video-ogl
#     dolphin-core
#     dolphin-common
#     dolphin-video-common
#     OpenGL::GL
# )

# Set compile options
# target_compile_features(dolphin-n64-video-ogl PRIVATE cxx_std_20)