# N64 Software Video Backend CMakeLists.txt

# TODO: Add N64 software video backend files here
# add_library(dolphin-n64-video-software STATIC
#     N64SoftwareVideoBackend.h
#     N64SoftwareVideoBackend.cpp
# )

# Set include directories
# target_include_directories(dolphin-n64-video-software PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${CMAKE_SOURCE_DIR}/Source/Core
#     ${CMAKE_SOURCE_DIR}/Source/Common
#     ${CMAKE_SOURCE_DIR}/Source/Core/VideoCommon
# )

# Link with existing Dolphin libraries
# target_link_libraries(dolphin-n64-video-software
#     dolphin-core
#     dolphin-common
#     dolphin-video-common
# )

# Set compile options
# target_compile_features(dolphin-n64-video-software PRIVATE cxx_std_20)