# N64 Vulkan Video Backend CMakeLists.txt

# TODO: Add N64 Vulkan video backend files here
# add_library(dolphin-n64-video-vulkan STATIC
#     N64VulkanVideoBackend.h
#     N64VulkanVideoBackend.cpp
# )

# Set include directories
# target_include_directories(dolphin-n64-video-vulkan PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${CMAKE_SOURCE_DIR}/Source/Core
#     ${CMAKE_SOURCE_DIR}/Source/Common
#     ${CMAKE_SOURCE_DIR}/Source/Core/VideoCommon
# )

# Link with existing Dolphin libraries
# target_link_libraries(dolphin-n64-video-vulkan
#     dolphin-core
#     dolphin-common
#     dolphin-video-common
#     Vulkan::Vulkan
# )

# Set compile options
# target_compile_features(dolphin-n64-video-vulkan PRIVATE cxx_std_20)